gh-pages update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jp-date-time-number-game",
-  "homepage": "https://Craig-Turley.github.io/jp-listening-game/",
+  "homepage": "https://Craig-Turley.github.io/jp-listening-game",
   "private": true,
   "version": "0.0.0",
   "type": "module",
